# dental-article-generator

./: .gitignore  __init__.py  cli.py  launch_app.bat  pyproject.toml
app/: main.py  state.py
app/components/: article_viewer.py  reference_badges.py  revision_panel.py
app/pages/: 1_browse.py  2_create.py  3_verify.py
app/services/: article_service.py  background_task.py  git_service.py  git_utils.py  link_validator.py  reference_verifier.py  revision_service.py  topic_generator.py
config/: settings.yaml
data/: ada_topics.csv  article_status.json
data/evidence_cache/: custom_antibiotic_prophylaxis_dental.json  custom_bpa_dental_materials_safety.json  custom_cannabis_oral_health.json  custom_celiac_disease_oral_manifestations.json  custom_dental_amalgam_safety.json  custom_dental_anesthesia_sedation.json  custom_dental_pain_analgesics.json  custom_dental_xray_safety.json  custom_denture_care_management.json  custom_diabetes_periodontal_disease.json  elem_first_molar.json  (+50 more)
docs/: ALGORITHM_DESIGN.md  REQUIREMENTS.md  ai-companion-technical-design.md  mh-wilds-channel-concept.md  mh-wilds-market-research.md  protocol_v2.md  research-mh-wilds-copyright.md
evidence/: __init__.py  evidence_manager.py  models.py  pubmed.py  web_evidence.py
generator/: __init__.py  writer.py
mh-ai-companion/: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt
quality/: __init__.py  checker.py
scripts/: add_links_to_all.py  generate_ada_topics.py  generate_pptx.py  generate_slides.py  launch.py  regenerate_all.py
topics/: __init__.py  loader.py  topics.yaml
(+245 files in other folders)
